--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jest-md-reporter/source",
+  "name": "@jest-markdown-reporter/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
